--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
           <a href="contact.html">Reach Me</a>
           <a href="stories.html">Stories</a>
-          <a href="index.html">Home</a>
+          <a href="index.html">Home Page</a>
       </nav>
       <section>
           <h1>Welcome</h1>
